# katon

./: CMakeLists.txt  README.md  katon.ebnf  main  main.cpp
AbstractSyntaxTree/: AbstractSyntaxTree.cpp  AbstractSyntaxTree.h
AbstractSyntaxTree/Nodes/: BinaryNode.h  Node.h  Nodes.h
Interpreter/: Interpreter.h
Klex/: Klex.cpp  Klex.h  tokens.txt
Parser/: Parser.cpp  Parser.h
examples/: binding.kat  closure.kat  example.kat  expression.kat  junk.kat  main.kat  test.kat  user.kat
include/: Interpreter.h  Klex.h  ParseException.h  Parser.h  RuntimeException.h  Token.h
include/AbstractSyntaxTree/: AbstractSyntaxTree.h  Callable.h  Environment.h  ExceptionObjectBuilder.h  ExceptionObjects.h  Executable.h  Expression.h  Function.h  FunctionSymbol.h  Iterable.h  Iterator.h  Member.h  Method.h  MethodSymbol.h  Node.h  Nodes.h  ObjectBuilder.h  ObjectDescriptor.h  Packets.h  Scope.h  Statement.h  StatementBlock.h  Symbol.h  Type.h  TypeDefinitions.h  ValueSymbol.h
include/AbstractSyntaxTree/Operators/: Addition.h  Assignment.h  BinaryOperator.h  Call.h  Cast.h  Conjunction.h  Disjunction.h  Division.h  ElementAccess.h  Equality.h  Exponentiation.h  GreaterThan.h  GreaterThanOrEqual.h  Inequality.h  LessThan.h  LessThanOrEqual.h  MemberAccess.h  Merge.h  Modulo.h  Multiplication.h  Negation.h  Negative.h  New.h  Operation.h  Subtraction.h  UnaryOperator.h
include/AbstractSyntaxTree/Statements/: BreakStatement.h  ContinueStatement.h  ExpressionStatement.h  ForStatement.h  IfStatement.h  InputStatement.h  LocalDeclarationStatement.h  OtherwiseStatement.h  PrintStatement.h  ReturnStatement.h  ThrowStatement.h  TryCatchStatement.h  WhileStatement.h
include/AbstractSyntaxTree/ValueExpression/: ArrayExpression.h  ObjectExpression.h  PrimitiveExpression.h
include/AbstractSyntaxTree/Values/: Array.h  Boolean.h  Double.h  Integer.h  Object.h  String.h  Value.h
include/AbstractSyntaxTree/Values/Primitives/: Boolean.h  Double.h  Integer.h  Primitive.h  (+1 more)
include/Nodes/: AttributeDeclaration.h  BinaryOperator.h  Boolean.h  Double.h  Integer.h  NaryNode.h  Node.h  Nodes.h  String.h  Value.h
klex/: klex  klex.cpp  klex.h  token.h
src/: AbstractSyntaxTree.cpp  Array.cpp  ArrayExpression.cpp  BinaryOperator.cpp  Environment.cpp  ExceptionObjects.cpp  Interpreter.cpp  Klex.cpp  Object.cpp  ObjectBuilder.cpp  ObjectDescriptor.cpp  ObjectExpression.cpp  Operation.cpp  Parser.cpp  Symbol.cpp  Value.cpp
